[metadata]
name = sample_server
version = 1.0.0
description = sample_server
long_description = file: README.md
long_description_content_type = text/markdown
platforms=['any']

[options]
packages = find:
install_requires =
    fastapi>=0.95.0
    orjson>=3.8.8
    hypercorn>=0.14.3
python_requires = >=3.10.4

[options.packages.find]
exclude = contrib; docs; test; test.*; test.plugins; test.plugins.*

[options.extras_require]
all =
	fastapi>=0.95.0
    orjson>=3.8.8
    hypercorn>=0.14.3

[options.entry_points]
console_scripts = sample_server = sample_server.__main__:start
